--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,6 +138,11 @@
   }
 }
 
+input {
+  padding: 0.625rem 0.75rem;
+}
+
+
 .prose-container {
   min-height: 300px;
   background: white;
@@ -145,7 +150,7 @@
 
 .ProseMirror {
   min-height: 200px;
-  padding: 1rem;
+  padding: 0.625rem 0.75rem;
 }
 
 .ProseMirror:focus {
@@ -249,6 +254,7 @@
   background-color: var(--gray-3);
   padding: 0.1rem;
   border-radius: 0.5rem;
+  margin-left: 10rem;
 }
 
 .floating-menu button {
@@ -258,7 +264,8 @@
 }
 
 .floating-menu button:hover {
-  background-color: var(--gray-3);
+  background-color: var(--foreground);
+  color: var(--background);
 }
 
 .floating-menu button.is-active {
@@ -279,4 +286,20 @@
 
 .journal-list-item:hover {
   background-color: var(--muted);
+}
+
+.tiptap p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
+.tiptap p.is-empty::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
 }
